--- a/Style.css
+++ b/Style.css
@@ -128,7 +128,7 @@ header {
     font-size: 32px;
     font-family: 'Press Start 2P', cursive;
     color: #ff00ff;
-    text-shadow: 0px 0px 10px #
+    text-shadow: 0px 0px 10px
 }
 
 /* ROOMS SECTION STYLES */
