--- a/Style.css
+++ b/Style.css
@@ -92,7 +92,7 @@ header {
 }
 
 .hero-content p {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Press Start 2P', cursive;
     font-size: 20px;
     margin-bottom: 20px;
     animation: fadeInUp 1s ease-in-out;
