--- a/Style.css
+++ b/Style.css
@@ -170,6 +170,7 @@ header {
 
 .team-member img {
     width: 100%;
+    height: 600px;
     border-radius: 25%;
     margin-bottom: 15px;
     transition: transform 0.4s ease-in-out;
@@ -366,4 +367,57 @@ footer {
     animation: fadeIn 1.5s ease-in-out forwards;
 }
 
+.carousel-container {
+    position: relative;
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
+    overflow: hidden;
+    background-color: #1a1a1a;
+    padding: 0px;
+    border-radius: 1px;
+    text-align: center;
+    box-shadow: 0 0 20px rgba(255, 0, 255, 0.3);
+    transition: transform 0.4s ease-in-out, box-shadow 0.4s ease;
+}
+
+.carousel {
+    display: flex;
+    transition: transform 0.4s ease-in-out;
+}
+
+.carousel-slide {
+    min-width: 100%;
+    max-height: 500px;
+}
+
+.carousel-slide img {
+    width: 100%;
+    height: auto;
+    border-radius: 25px;
+}
+
+.prev-btn, .next-btn {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 24px;
+}
+
+.prev-btn {
+    left: 10px;
+}
+
+.next-btn {
+    right: 10px;
+}
+
+.prev-btn:hover, .next-btn:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
 
